Revert "Fix link mongodb"
This reverts commit 4263765a0c15572f0ce6ec83189ca781d8ec1bcc.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB = "mongodb+srv://20521740:sXbC80IivBT29nDS@twitterdb.hrxvzr3.mongodb.net/WebProject"
+DB = "mongodb+srv://brogrammers2527:brogrammers2527@cluster0-mwti3.mongodb.net/test?retryWrites=true&w=majority"
 PORT: "3002"
