--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.10",
     "morgan": "~1.9.1",
