Update .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DB = "mongodb+srv://20521740:sXbC80IivBT29nDS@twitterdb.hrxvzr3.mongodb.net/WebProject"
 PORT: "3002"
+ENV_USERNAME=ptphat77clone1@gmail.com
+ENV_PASSWORD=oidwbnvicknpjhxm
