--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ DB = "mongodb+srv://20521740:sXbC80IivBT29nDS@twitterdb.hrxvzr3.mongodb.net/WebP
 PORT: "3002"
 ENV_USERNAME=ptphat77clone1@gmail.com
 ENV_PASSWORD=oidwbnvicknpjhxm
+
+# Configuration Cloudinary
+CLOUD_NAME=diimgquir
+API_KEY=317857715318896
+API_SECRET=pNINx1d30wOpZlxEv1YklPvCyfo
