--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DB = "mongodb+srv://20521740:sXbC80IivBT29nDS@twitterdb.hrxvzr3.mongodb.net/WebP
 PORT: "3002"
 ENV_USERNAME=ezfashionwld@gmail.com
 ENV_PASSWORD=pavybngemsuhydaf
+JWT_SECRET_KEY="JWT SECRET"
 
 # Configuration Cloudinary
 CLOUD_NAME=diimgquir
