--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "morgan": "~1.9.1",
         "nodemailer": "^6.4.2",
         "passport": "^0.4.0",
+        "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "randomstring": "^1.1.5",
         "request": "^2.88.0",
