add captcha feature

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ JWT_SECRET_KEY="JWT SECRET"
 CLOUD_NAME=diimgquir
 API_KEY=317857715318896
 API_SECRET=pNINx1d30wOpZlxEv1YklPvCyfo
+
+# captcha
+CAPTCHA_SITE_KEY="6LcIsZImAAAAAAAJOprcUIhgGaGeGAcF4Ggtr6xN"
+CAPTCHA_SECRET_KEY="6LcIsZImAAAAADVXSzP2LDeBGXke5y1DYdThzuKR"
