--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.0.3",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
+        "express-rate-limit": "^6.7.0",
         "express-session": "^1.17.0",
         "http-errors": "~1.6.3",
         "jquery": "^3.4.1",
