--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "http-errors": "~1.6.3",
         "jquery": "^3.4.1",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
         "mongodb": "^3.3.4",
         "mongoose": "^5.7.10",
         "morgan": "~1.9.1",
