update env, file name

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PORT: "3002"
 ENV_USERNAME=ezfashionwld@gmail.com
 ENV_PASSWORD=pavybngemsuhydaf
 JWT_SECRET_KEY="JWT SECRET"
+SESSION_SECRET="notsecret"
 
 # Configuration Cloudinary
 CLOUD_NAME=diimgquir
