update new captcha

--- a/.env
+++ b/.env
@@ -10,6 +10,11 @@ CLOUD_NAME=diimgquir
 API_KEY=317857715318896
 API_SECRET=pNINx1d30wOpZlxEv1YklPvCyfo
 
-# captcha
-CAPTCHA_SITE_KEY="6LcIsZImAAAAAAAJOprcUIhgGaGeGAcF4Ggtr6xN"
-CAPTCHA_SECRET_KEY="6LcIsZImAAAAADVXSzP2LDeBGXke5y1DYdThzuKR"
+# Captchav2
+# Invisible
+# CAPTCHA_SITE_KEY="6LcIsZImAAAAAAAJOprcUIhgGaGeGAcF4Ggtr6xN"
+# CAPTCHA_SECRET_KEY="6LcIsZImAAAAADVXSzP2LDeBGXke5y1DYdThzuKR"
+# Checkbox
+CAPTCHA_SITE_KEY="6Leniw8nAAAAAO-sVjoTJOdVtaiNHNrVH9kWfP4n"
+CAPTCHA_SECRET_KEY="6Leniw8nAAAAABqVKaPcJNPs12IT6JSAX4wRrDI3"
+
