--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express-rate-limit": "^6.7.0",
         "express-session": "^1.17.0",
         "http-errors": "~1.6.3",
+        "isomorphic-fetch": "^3.0.0",
         "jquery": "^3.4.1",
         "jsonwebtoken": "^9.0.0",
         "moment": "^2.29.4",
